tests/NormalTests/paczka1/small_fuzzy/73748150.err
Error in line 1: QUgERAvr1f4 A903 45,5
Error in line 5: OqMKN4qUMKR A903 74,0
Error in line 4: A903 A366 97,9
Error in line 14: A903 A903 82,9
Error in line 15: A903 S242 95,6
